k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cliente-pet
  labels:
    name: cliente-pet
    app: cliente-pet-api
