k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-pet-service
  namespace: cliente-pet
  labels:
    app: cliente-pet-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cliente-pet-api
