k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliente-pet-ingress
  namespace: cliente-pet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: cliente-pet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cliente-pet-service
            port:
              number: 80
